--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,20 @@
     <properties>
         <spring.ver>4.0.4.RELEASE</spring.ver>
         <jetty.ver>9.1.5.v20140505</jetty.ver>
+        <thymeleaf.ver>2.1.3.RELEASE</thymeleaf.ver>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>2.2</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.1.2</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
@@ -23,10 +35,15 @@
             <version>3.1.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf-spring4</artifactId>
+            <version>${thymeleaf.ver}</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>jstore</finalName>
-       <plugins>
+        <plugins>
             <plugin>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
