--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,14 @@
             <artifactId>thymeleaf-spring4</artifactId>
             <version>${thymeleaf.ver}</version>
         </dependency>
+
+        <dependency>
+            <groupId>nz.net.ultraq.thymeleaf</groupId>
+            <artifactId>thymeleaf-layout-dialect</artifactId>
+            <version>1.2.4</version>
+            <scope>compile</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>bootstrap</artifactId>
