--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,18 @@
             <artifactId>tomcat-dbcp</artifactId>
             <version>8.0.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>1.6.0.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>4.3.5.Final</version>
+        </dependency>
     </dependencies>
+
     <build>
         <finalName>jstore</finalName>
         <plugins>
