--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -5,6 +5,7 @@ jdbc.password = 123456
 
 hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql = true
-hibernate.hbm2ddl.auto = update
+hibernate.hbm2ddl.auto = create
+
 
 
